--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .cabecalho{
-    background-color: linear-gradient(#0fec2c, #c1f3bf);
+    background-image: linear-gradient(#0fec2c, #c1f3bf);
     display: flex;
     justify-content: space-around;
     align-items: center;
