--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("styles/header.css");
+
 .cabecalho{
     background-image: linear-gradient(#0fec2c, #c1f3bf);
     display: flex;
@@ -8,7 +10,7 @@
 }
 
 .Banner-cabecalho{
-    width: 100%;
+    width: 50%;
 }
 
 .imagem-banner{
