--- a/styles/header.css
+++ b/styles/header.css
@@ -1,17 +1,15 @@
 @media screen and (min-width: 1024px){
 
-    .container__titulo, .container__titulo--negrito{
-        font-family: var(--fonte-sencundaria);
-        font-size: 30px;
-    }
-    .container__titulo{
-        font-weight: 400;
-        display: block;
-    }
-    .container__titulo--negrito{
-        font-weight: 700;
+    .Banner-cabecalho-a {
+        display: none;
+
     }
 
+    
+    }
+
+
+
     .Banner-cabecalho{
-        width: 30%;
+        width: 10%;
     }
