--- a/styles/header.css
+++ b/styles/header.css
@@ -13,7 +13,11 @@
     }
 
     .tema{
-        font-size: 12px;
+        font-size: 16px;
+    }
+
+    .imagem-rodape{
+        width: 10%;
     }
 
 
